# DesktopSAM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc
resources/: app_icon.aps
src/: Algorithm.cpp  Algorithm.h  MainFrame.cpp  MainFrame.h  MainWindowGUI.cpp  MainWindowGUI.h  QtImageCanvas.cpp  QtImageCanvas.h  main.cpp
tools/: Install-OpenCV.js  Install-Qt.js  Install-onnxruntime.js  Install.js  README.txt  Setup.bat
